--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "hugeicons-react": "^0.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.24.0"
+    "react-router-dom": "^6.24.0",
+    "sweetalert": "^2.1.2"
   }
 }
