--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@mui/lab": "^5.0.0-alpha.170",
     "@mui/material": "^5.15.21",
     "@mui/styles": "^5.15.21",
+    "@mui/x-data-grid": "^7.22.3",
     "axios": "^1.7.2",
     "crypto-js": "^4.2.0",
     "file-loader": "^6.2.0",
