--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "crypto-js": "^4.2.0",
     "file-loader": "^6.2.0",
     "hugeicons-react": "^0.2.0",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.24.0",
