--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/react-dom": "^18.2.0",
     "autoprefixer": "^10.1.0",
     "babel-loader": "^8.2.2",
+    "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^6.3.0",
     "dotenv-webpack": "^8.0.1",
     "html-webpack-plugin": "^5.3.2",
